hello-world/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  type: NodePort
  ports:
  - port: 4001
    protocol: TCP
    targetPort: 4001
  selector:
    app: hello-world
