hello-world/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  to:
    kind: Service
    name: hello-world
    weight: 100
  port:
    targetPort: 4001
  wildcardPolicy: None
